Changed organization of discussion. Added in overall findings. Started paragraph about future work using BBS data

--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -32,19 +32,19 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Discussion
 
 ## Overall findings
-The work presented in this thesis brought together an interdiscplinary approach to expand on previous literature to further explore the contribution of the plasma proteome and platelet function to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in summary Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings).
+The work presented in this thesis brought together an interdiscplinary approach to expand on previous literature to further explore the contribution of the plasma proteome and platelet function to obesity-related thrombosis. A summary of pathways explored in each results chapters is displayed in Figure \@ref(fig:Thesis-schematic-chaps), with a more detailed summary of findings in Table \@ref(tab:main-thesis-findings). 
 
 ```{r Thesis-schematic-chaps, echo = FALSE, out.width = "90%", fig.cap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers where associations are explored. Figure made using BioRender.com.", fig.scap="Schematic of the multi-step pathway addressed in the thesis with chapter numbers"}
 include_graphics(path = "figure/General_discussion/Thesis_graphic_overview_chapters.png", dpi = NA)
 ```
 
-```{r main-thesis-findings,  echo=FALSE}
+```{r main-thesis-findings,  echo=FALSE, warning=FALSE}
 options(knitr.kable.NA = "")
 Chapter = c('Chapter 4', 'Chapter 5', 'Chapter 6', 'Chapter 7', 'Chapter 8')
-findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, there was little evidence for an effect of high BMI on platelet function, but there was evidence for a difference in levels of platelet proteins across groups. This study needs to be replicated with a larger N, controlling for confounders.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. It is likely that these effects are through the CCR4 receptor which is likely to be Gq coupled. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome and protein levels altered as a result of higher BMI (Chapter 7) can be reversed with weight loss.")
+findings = c("Higher body mass index (BMI) leads to higher immature platelet count (IPC) in a Mendelian randomization framework (INTERVAL). Within a cardiac surgery cohort (COPTIC), immature platelet count was positively associated with whole blood platelet aggregation.","Laboratory experiments were optimised to assess platelet function from patients. In the clinical pilot study, there was no evidence for an effect of high BMI on platelet function, but there was evidence for a difference in levels of platelet proteins across groups. This study needs to be replicated with a larger N, controlling for confounders.", "This study provided evidence that the chemokines MDC and TARC can potentiate PAR1-AP induced platelet function. The chemokines were also found to be able to activate platelets when applied alone. It is likely that these effects are through the CCR4 receptor which is likely to be G~q~ coupled. A two sample Mendelian randomization analysis implicated higher levels of MDC in deep vein thrombosis and pulmonary embolism.", "Higher BMI has a causal effect on levels of proteins which circulate in the plasma. Proteins most altered by BMI were enriched for cardiovascular disease, metabolic disease and renal disease.", "Weight loss as a result of caloric restriction has a substantial effect on the plasma proteome and protein levels altered as a result of higher BMI (Chapter 7) can be reversed with weight loss.")
 mytable = cbind(Chapter, findings)
 colnames(mytable) <- c("Chapter", "Main findings")
-mytable %>% kable(caption = "Summary of main findings from the thesis", booktabs = TRUE) %>% 
+mytable %>% kable(caption = "Summary of main findings from the thesis", booktabs = TRUE, format="markdown") %>% 
   kable_classic_2(full_width = F) %>%
   #kable_paper("hover", full_width = F)
  kable_styling(full_width = TRUE) %>%
@@ -53,9 +53,21 @@ column_spec(2, width = "12cm") %>%
   landscape()
 ```
 
-## Strengths and limitations
+This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here there was no evidence for an effect of BMI on platelet function, however alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. There was consisent evidence for BMI effects on proteins across study designs and there was evidence that changes in such proteins were enriched for cardiovascular disease. Two of these chapters have been published in the International Journal of Obesity and Platelets journal, thereby highlighting the novelty of the contents of this thesis.
 
+## Strengths and limitations
+- Combination of approaches. Strengthening understanding of mechanisms of obesity. Comment of the general benefit of having developed skills in both epidemiology and basic science?
+
+## Limitations
+The associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps) were explored due to the availability of appropriate data or the ability to carry out experiments. There are other steps within the pathway that need to be assessed to try to further characterise this pathway. For example xx, xx and xx.
+
+## Wider implications of findings (e.g. clinical)
+- IPC should be considered when prescribing antiplatelet medication, especially in those with higher BMI.
+- As various proteins altered by BMI have been implicated in disease, could a combination of biomarkers/profile effect be used to determine patients at greatest risk of a thrombotic event. Reference Andrei's paper (needs to be added to MedRxiV) with BMI protein to DVT section.
+ 
 ## Future studies
+Based on the findings of the thesis, there are various areas which require further exploration.
+
 Chapter 4
 - Replicate BMI and IPC association in another large cohort. 
 - Need to be summary stats for larger cohorts with platelet function to do two sample MR for BMI to platelet function.
@@ -70,16 +82,14 @@ Chapter 6
 - These chemokines were measured within Chapter 7 - there was evidence for an association between BMI and MDC, and weak evidence for a causal effect (p=0.07). This did not pass multiple testing correction. It would be beneficial to look at these chemokines in other cohorts. In the DiRECT analysis, there was weak evidence that a reduction in weight reduces levels of MDC (p=0.06). Again, this did not pass multiple testing. The agreement in direction across the two studies (raised with higher BMI and reduced with weight loss), suggests that this effect could be real, however it may be a relatively small effect which may require more targeted proteomics. The effects were smaller for TARC, suggesting that if these effects are real, body mass index has a larger effect on MDC levels.
 
 Chapter 7
-The analyses in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. However, linear MR may not always be the most appropriate as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship [@Sun2019]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the nlmr R package do not allow the user to define their bounds of their strata and therefore makes it difficult to interpret results. The glsmr package was developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail is provided in the Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. Stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^, there are fewer participants and therefore amplifying the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. 
-
-- Recent data suggested nonlinearity with metabolites, preliminary analyses have suggested that effects may be nonlinear (Add a Figure as an appendix - use example of BMI and CRP).
+The analyses in Chapter \@ref(BMI-protein-MR) provided evidence for a causal effect of BMI on a range of proteins. However, linear MR may not always be the most appropriate as there are often nonlinear relationships, for example between BMI and mortality, where there is a J-shaped relationship [@Sun2019]. Most studies have implemented linear models when looking at the effect of BMI on proteins/metabolites, however these relationships should be re-examined for nonlinearity. Methods to do this are currently available, but they are not easily implementable on a large scale, such as when there are thousands of protein outcomes. Current methods such as the nlmr R package do not allow the user to define their bounds of their strata and therefore makes it difficult to interpret results. The glsmr package was developed to allow to do so and therefore provide estimates for causal effects in the predefined ranges of the exposure such as BMI. More detail has been provided in the Appendix \@ref(Appendix-A), with an example using the effect of BMI on levels of leptin. Stratifying MR estimates reduces the power and therefore creates more imprecise estimates. Furthermore, when looking at the effects of obesity at the upper end of the distribution (e.g. BMI range of 40-60 kg/m^2^), there are fewer participants and therefore causing the same power issue. As a result, larger sample sizes would be needed with oversampling at the ends of the distributions to ensure sufficient power in each stratum. More recently, SomaLogic proteomic analysis has been performed om plasma samples from nearly 40,000 Icelanders [@Ferkingstad2021]. Studies of this scale would help with stratifying into groups while maintaining power.
 
 Chapter 8
+The analyses in Chapter \@ref(BMI-protein-RCT) utilise an RCT implementing caloric restriction to explore the effect of weight loss on the plasma proteome. As mentioned briefly within the limitations section of that chapter, the reduction in BMI was modest, so the majority of participants will still have obesity even 1 year after the intervention. Therefore it may be difficult to determine the effects of reducing adiposity. Bariatric surgery is another intervention which typically causes a greater reduction in BMI (from >40 gk/m^2^) to ..
+
 - Utilise bariatric surgery data as a third line of evidence to explore effect of BMI/weight loss on the plasma proteome. Bring in that this will be performed as part of the transition fellowship.
 - Work on proteomic networks to really determine key proteins in disease - this leads onto the transition fellowship.
 - Instrument groups of proteins
 - Two sample MR of proteins of interest to immature platelet count - .
 
-## Wider implications of findings (e.g. clinical)
-
-## Overal conclusion
+## Overall conclusion
