Worked on conclusions

--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -56,6 +56,8 @@ column_spec(2, width = "12cm") %>%
 This thesis started with exploring the effect of BMI on platelet traits within a cohort of UK blood donors (INTERVAL) (Chapter \@ref(BMI-platelets-INTERVAL)). This chapter provided evidence, using both observational and MR analyses, that higher BMI increases IPC. As INTERVAL did not have measures of platelet function, associations between IPC and whole blood platelet aggregation were explored with a cardiac surgery cohort (COPTIC). Here IPC and platelet aggregation were positively associated, independent of the overall platelet count. The next chapter (Chapter \@ref(BMI-platelets-clinic)) sought to determine the effect of BMI on more detailed readouts of platelet function by designing a patient study, recruiting patients who were due to undergo bariatric surgery. Here there was no evidence for an effect of BMI on platelet function, however alterations in the plasma proteome were found which may have implications for platelet function and signalling. Follow-up experiments using other platelet function techniques, with a larger sample size, are now required. Chapter \@ref(chemokine-platelets) examined the effect of the chemokines MDC and TARC on platelet function, chemokines which may be raised a result of obesity-induced inflammation. MDC and TARC were found potentiate PAR1-AP induced platelet function in washed platelets and MDC was able to cause platelet aggregation in PRP. This aggregation was found to be mediated by CCR4, with evidence that this receptor signals through G~q~ coupling. Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) both aimed to explore effects of adiposity on the plasma proteome. Chapter \@ref(BMI-protein-MR) used observational and MR frameworks and found causal evidence for an effect of BMI on the plasma proteome whereas Chapter \@ref(BMI-protein-RCT) used a weight loss intervention to explore effects of BMI on the plasma proteome. There was consisent evidence for BMI effects on proteins across study designs and there was evidence that changes in such proteins were enriched for cardiovascular disease. Two of these chapters have been published in the International Journal of Obesity and Platelets journal, thereby highlighting the novelty of the contents of this thesis.
 
 ## Strengths and limitations
+This thesis has approached hypotheses using a wide range of techniques. These have helped 
+
 - Combination of approaches. Strengthening understanding of mechanisms of obesity. Comment of the general benefit of having developed skills in both epidemiology and basic science?
 
 ## Limitations
