changed tense and added LACE estimate

--- a/index/10-appendix.Rmd
+++ b/index/10-appendix.Rmd
@@ -37,7 +37,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 This appendix contains an example of nonlinearity occurring for the association between body mass index (BMI) and levels of certain plasma proteins within the INTERVAL dataset. This analysis was performed as a result of an observation within the group and from published data [@Li2021] that the effect of BMI on certain circulating metabolites such as LDL-C may be nonlinear. Therefore it is likely that this is also the case with proteins: biologically, proteins might reach a threshold and therefore increasing BMI may lead to a plateau in the levels of the protein. Alternatively, certain technologies may reach a maximum in detection. The SomaLogic platform has a wide range of detection from femtomolar to micromolar, therefore this should be less of an issue. This possible nonlinear relationship has not been accounted for in the linear models and Mendelian ramdomisation analyses performed in Chapter \@ref(BMI-protein-MR). Nonlinearity may also explain why some proteins may be altered as a result of high BMI in the MR, but caloric restriction may not alter the levels of the same protein. There may be a certain BMI that needs to be reached before protein levels are altered therefore in DiRECT, as BMI remains in the obese category, effects may not be seen. Exploring nonlinearity is ongoing, but this appendix provides an example of the possible nonlinear relationship between BMI (in kg/m^2^ so that it is biologically meaningful and effects can be related back to the NHS BMI categories) and levels of leptin. 
 
 ## Observational association between BMI and leptin 
-The association between BMI and leptin was explored observationally using both a linear model and a nonlinear generalized additive model (GAM) (Figure \@ref(fig:leptin-lm-GAM)). Here, using BMI as the exposure and leptin as the outcome (without covariables added in the model), it is clear that a linear model indicates a positive association between the two variables. However, the nonlinear GAM indicates that after a BMI of around 40 kg/m^2^ the levels of leptin do not increase anymore. These two models can compared using an ANOVA (F test) with the hypothesis that the nonlinear GAM is a better fit than the linear model, where a small P value indicates that the GAM is a better fit. For leptin, R^2^ for the linear model was 0.51 and it was 0.56 for the GAM, with a p value of (2.17x10^-59^). This was the smallest p value comparing the two models for all 4,034 SOMAmers in INTERVAL.
+The association between BMI and leptin was explored observationally using both a linear model and a nonlinear generalized additive model (GAM) (Figure \@ref(fig:leptin-lm-GAM)). Here, using BMI as the exposure and leptin as the outcome (without covariables added in the model), there was evidence for a positive linear association between the two variables. However, the nonlinear GAM indicated that after a BMI of around 40 kg/m^2^ the levels of leptin do not increase anymore. These two models were compared using an ANOVA (F test) with the hypothesis that the nonlinear GAM is a better fit than the linear model, where a small P value indicates that the GAM is a better fit. For leptin, R^2^ for the linear model was 0.51 and it was 0.56 for the GAM, with a p value of (2.17x10^-59^). This was the smallest p value comparing the two models for all 4,034 SOMAmers in INTERVAL.
 
 (ref:leptin-lm-GAM-cap) Linear model (blue) and nonlinear generalized additive model (red) of the association between BMI and leptin with 95% confidence intervals. The vertical lines indicate the mean BMI for each BMI category (underweight, healthy, all, overweight, obese)
 (ref:leptin-lm-GAM-scap) Linear model and generalized additive model of the association between BMI and leptin
@@ -46,7 +46,7 @@ include_graphics(path = "figure/Appendix/leptin_nonlinear_obs.pdf", dpi = NA)
 ```
 
 ## Determining nonlinear effects using MR
-Nonlinear associations can be easily implemented using observational associations. However due to the nature of MR, regression BMI on the genetic risk score provides estimates genetically predicted BMI. The protein is then regressed on this genetically predicted BMI using a nonlinear function, however, this covers a limited range of BMI as seen in figure \@ref(fig:leptin-lm-GAM-MR). Therefore it is more difficult to interpret this causal effect over the full range of BMI observed in the population.
+Nonlinear associations can be easily implemented using observational associations. However due to the nature of MR, regressing BMI on the genetic risk score provided estimates of genetically predicted BMI. The protein was then regressed on this genetically predicted BMI using a nonlinear function, however, this covered a limited range of BMI as seen in Figure \@ref(fig:leptin-lm-GAM-MR). Therefore it was more difficult to interpret this causal effect over the full range of BMI observed in the population.
 
 (ref:leptin-lm-GAM-MR-cap) Linear model and generalized additive model of the association between BMI and leptin using Mendelian randomization. Linear model (blue) and generalized additive model (red) of the association between BMI and leptin with 95% confidence intervals. The vertical lines indicate the mean BMI for each BMI category (underweight, healthy, all, overweight, obese)
 (ref:leptin-lm-GAM-MR-scap) Linear model and generalized additive model of the association between BMI and leptin using Mendelian randomization
@@ -55,7 +55,7 @@ include_graphics(path = "figure/Appendix/leptin_nonlinear_MR.pdf", dpi = NA)
 ```
 
 ## Using nonlinear MR package
-The nonlinear MR package ("nlmr") can also be utilised which uses two methods: fractional polynomials and piecewise MR [@Staley2017]. Fractional polynomials consist of metaregression of the localised average causal effect (LACE) estimates against the mean of the exposure in each stratum, whereas the piecewise MR estimates linear functions in a piecewise manner, where the gradient is the LACE estimate in each stratum. As indicated in Figure \@ref(fig:leptin-nlmr)A, the fractional polynomial method indicates that the levels of leptin plateaus with higher BMI. This effect is less clear using the piecewise method in Figure \@ref(fig:leptin-nlmr)B. Tests of nonlinearity such as the fractional polynomial nonlinearity p-value suggest that this fit is not better than a linear model (p=0.09). This is also the case from the Cochran Q test for both the fractional polynomial and piecewise linear model, where the p-values were 0.57 and 0.62 respectively. 
+The nonlinear MR package ("nlmr") was also be utilised. This package utilises two methods: fractional polynomials and piecewise MR [@Staley2017]. Fractional polynomials consist of metaregression of the localised average causal effect (LACE) estimates against the mean of the exposure in each stratum, whereas the piecewise MR estimates linear functions in a piecewise manner, where the gradient is the LACE estimate in each stratum. As indicated in Figure \@ref(fig:leptin-nlmr)A, the fractional polynomial method with five quantiles suggested that the levels of leptin start to plateau with higher BMI. This effect was less clear using the piecewise method in Figure \@ref(fig:leptin-nlmr)B, which also has been set to five quantiles. However, tests of nonlinearity such as the fractional polynomial nonlinearity p-value suggested that this fit is not better than a linear model (p=0.13). This was also the case using the Cochran Q test for both the fractional polynomial and piecewise linear model, where the p-values were both 0.62. LACE estimates suggest that the effect of BMI on leptin is strongest in the first quantile (Estimate = 0.20, 95% CI 0.10 to 0.30, p=7.00x10^-5). For the fifth quantile, the estimate  is 0.12 (95% CI 0.04 to 0.20, p=0.0020).
 
 (ref:leptin-nlmr-cap) Effects of BMI on levels of leptin using nonlinear MR from the nlmr R package [@Staley2017]. A) fractional polynomial MR. B) Piecewise MR.
 (ref:leptin-nlmr-scap) Effects of BMI on levels of leptin using nonlinear MR
@@ -64,7 +64,7 @@ include_graphics(path = "figure/Appendix/leptin_nlmr_fracpoly_piecewise.pdf", dp
 ```
 
 ## GAM and linear stratified MR (GLSMR)
-The issue with these methods is that it isn't possible to estimate the effect of a certain range of BMI on protein levels. This is important to be able to understand the range of BMIs where certain effects on proteins are likely to occur. Therefore the package "glsmr" was created within the group by David Hughes. This package enables estimates to be derived for the effect of the exposure on the outcome for specified ranges in the exposure, using both observational associations and using Mendelian randomization. It also compares the linear and nonlinear models. More details can be found here https://github.com/hughesevoanth/glsmr. The effects of BMI on leptin levels were further explored using this package. For this analysis the strata were defined as 18.5-25 kg/m^2^ (healthy), 25-30kg/m^2^ (overweight) and 30-40kg/m^2^ (obesity). Similar to Figures \@ref(fig:leptin-lm-GAM) and \@ref(fig:leptin-lm-GAM-MR), Figure \@ref(fig:leptin-glsmr)A and B indicate the observational and MR linear and nonlinear GAMs with the comparison in model fit indicated by the p-values. Figure \@ref(fig:leptin-glsmr)C indicates how as the BMI category increases, the magnitude of the estimate becomes smaller, where the estimate is halved when comparing the obesity group with the healthy BMI group. The estimates also becomes smaller in the MR (Figure \@ref(fig:leptin-glsmr)D)
+The issue with these methods is that it isn't possible to estimate the effect of a certain range of BMI on protein levels. This is important to be able to understand the range of BMIs where certain effects on proteins are likely to occur. Therefore the package "glsmr" was created within the group by David Hughes. This package enables estimates to be derived for the effect of the exposure on the outcome for specified ranges in the exposure, using both observational associations and using Mendelian randomization. It also compares the linear and nonlinear models. More details can be found here https://github.com/hughesevoanth/glsmr. The effects of BMI on leptin levels were further explored using this package. For this analysis the strata were defined as 18.5-25 kg/m^2^ (healthy), 25-30kg/m^2^ (overweight) and 30-40kg/m^2^ (obesity). Similar to Figures \@ref(fig:leptin-lm-GAM) and \@ref(fig:leptin-lm-GAM-MR), Figures \@ref(fig:leptin-glsmr)A and B indicate the observational and MR linear and nonlinear GAMs with the comparison in model fit indicated by the p-values. Figure \@ref(fig:leptin-glsmr)C indicates how as the BMI category increases, the magnitude of the estimate became smaller, where the estimate was halved when comparing the obesity group with the healthy BMI group. The estimates also became smaller in magnitude in the MR (Figure \@ref(fig:leptin-glsmr)D)
 
 (ref:leptin-glsmr-cap) Observational and Mendelian randomization estimates for the effect of BMI (kg/m^2^) and leptin (SDs) stratified by BMI category. Shaded areas display the ranges of BMI of each stratum: 18.5-25 (red), 25-30 (blue), 30-40 (green) A) Comparison between the fit of the nonlinear and linear generalized additive models (GAMs) with age and sex as covariables.  B) Comparison between the fit of the nonlinear and linear generalized additive models (GAMs) with age and sex as covariables for the two stage least squares Mendelian randomization (MR) analysis. C) Stratified estimates for the observational association between BMI and leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). D) Stratified estimates for the MR estimates for the effect of BMI on leptin (beta is SD change in leptin per 1 kg/m^2^ increase in BMI). Black indicates the estimate has a p value of >0.05 and red indicates p<0.05. Strata estimates are presented as circles with the estimate for the complete dataset represented by a square.
 (ref:leptin-glsmr-scap) Observational and Mendelian randomization estimates for the effect of BMI and leptin stratified by BMI.
